Increased max window size before navbar fades in and fixed nav collapse color bug

--- a/res/css/home-page-style.css
+++ b/res/css/home-page-style.css
@@ -48,7 +48,7 @@ body{
 }
 
 
-@media (min-width: 2000px) {
+@media (min-width: 2400px) {
     .navbar{
         background-color: #292b2c;
         transition-duration: 0.5s;
